fixed goals being rendered behind the lines

--- a/style/roadmap.less
+++ b/style/roadmap.less
@@ -55,6 +55,8 @@
 			position: absolute;
 			display: flex;
 			padding: 1em 0.75em;
+			background-color: var(--primary-color);
+			z-index: 1;
 			&.card{
 				flex-direction: column;
 			}
